helm/home-k8s/kustomize/adguard-home/base/deployment.yaml
# Source: adguard-home/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  labels:
    helm.sh/chart: adguard-home-0.9.0
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.107.19"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-home
      app.kubernetes.io/instance: release-name
  strategy:
    {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-home
        app.kubernetes.io/instance: release-name
      annotations:
        checksum/secret: 1a80e9eff16477b2cf66e50fa4424fb1cb527618f9221e25c68ad4219a91194f
        prometheus.io/port: api
        prometheus.io/scrape: "true"
    spec:
      # affinity:
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: app.kubernetes.io/name
      #           operator: In
      #           values:
      #           - adguard-home
      #       topologyKey: "kubernetes.io/hostname"
      serviceAccountName: adguard-home
      securityContext:
        {}
      volumes:
      - name: bootstrap-config-vol
        secret:
          secretName: adguard-home
      - name: data-vol
        persistentVolumeClaim:
          claimName: adguard-home
      
      containers:
        - name: adguard-home
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - ALL
            privileged: true
          image: "adguard/adguardhome:v0.107.21"
          imagePullPolicy: IfNotPresent
          ports:
          - name: dns-tcp
            containerPort: 53
            protocol: TCP
          - name: dns-udp
            containerPort: 53
            protocol: UDP
          - name: http
            containerPort: 80
            protocol: TCP
          - name: https
            containerPort: 443
            protocol: TCP
          - name: https-udp
            containerPort: 443
            protocol: UDP
          - name: admin
            containerPort: 3000
            protocol: TCP
          - name: dns-over-tls
            containerPort: 853
            protocol: TCP
          - name: dns-over-quic-1
            containerPort: 784
            protocol: UDP
          - name: dns-over-quic-2
            containerPort: 853
            protocol: UDP
          - name: dns-over-quic-3
            containerPort: 8853
            protocol: UDP
          - name: dnscrypt
            containerPort: 5443
            protocol: TCP
          - name: dnscrypt-udp
            containerPort: 5443
            protocol: UDP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          resources:
            {}
          volumeMounts:
          - name: data-vol
            mountPath: /opt/adguardhome/work
            subPath: work
          - name: data-vol
            mountPath: /opt/adguardhome/conf
            subPath: conf
