helm/home-k8s/kustomize/adguard-home/base/services.yaml
---
# Source: adguard-home/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-admin-panel
  labels:
    helm.sh/chart: adguard-home-0.9.0
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.107.19"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: release-name
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: admin
    protocol: TCP
---
# Source: adguard-home/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-http
spec:
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: release-name
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
---
# Source: adguard-home/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-https
spec:
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: release-name
  type: ClusterIP
  ports:
  - port: 443
    targetPort: https
    protocol: TCP
---
# Source: adguard-home/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
spec:
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: release-name
  type: NodePort
  ports:
  - port: 53
    name: dns-tcp
    targetPort: dns-tcp
    protocol: TCP
  - port: 53
    name: dns-udp
    targetPort: dns-udp
    protocol: UDP
---
# Source: adguard-home/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dot
spec:
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: release-name
  type: NodePort
  ports:
  - port: 853
    targetPort: dns-over-tls
    protocol: TCP
---
# Source: adguard-home/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-doq
spec:
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: release-name
  type: NodePort
  ports:
  - port: 784
    name: dns-over-quic-1
    targetPort: dns-over-quic-1
    protocol: UDP
  - port: 8853
    name: dns-over-quic-3
    targetPort: dns-over-quic-3
    protocol: UDP
---
# Source: adguard-home/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dnscrypt
spec:
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: release-name
  type: NodePort
  ports:
  - name: dnscrypt-tcp
    port: 5443
    targetPort: dnscrypt
    protocol: TCP
  - name: dnscrypt-udp
    port: 5443
    targetPort: dnscrypt-udp
    protocol: UDP
